--- a/ContactLuxeRealEstates/contact.html
+++ b/ContactLuxeRealEstates/contact.html
@@ -17,9 +17,9 @@
     <nav class="navbar navbar-expand-md navbar-light py-4">
         <div class="container">
             <a href="index.html" class="navbar-brand">
-                <img src="img/vector.svg" alt="logo">
+                <img src="vector.svg" alt="logo">
                 <br>
-                <img src="img/luxe-living.svg" alt="logo">
+                <img src="luxe-living.svg" alt="logo">
                 <!-- <h3 class="d-inline align-middle">
                     <span class="text-primary">Luxe Living</span
                 </h3> -->
