--- a/ContactLuxeRealEstates/contact.html
+++ b/ContactLuxeRealEstates/contact.html
@@ -60,8 +60,8 @@
         <div class="primary-overlay text-white">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-12 text-center">
-                        <h1 class="display-2 mt-5 pt-5">
+                    <div class="col-sm-12 text-center">
+                        <h1 class="display-5 mt-5 pt-5">
                             Contact Luxe Living Real Estate
                         </h1>
                         <p class="lead">We Can Help</p>
@@ -113,7 +113,7 @@
     <!-- RESPONSIVE GRID -->
     <div class="container mt-3">
         <div class="row">
-            <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4 text-center centre-pic vertical">
+            <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4 text-center  vertical">
                 <i class="fa fa-phone" aria-hidden="true"></i>
                 <h3>Phone</h3>
                 <p>Have a question?</p>
@@ -121,7 +121,7 @@
                 <p>International: (603)-555-0123 </p>
                 <p>USA </p>
             </div>
-            <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4 text-center centre-picc vertical">
+            <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4 text-center  vertical">
                 <i class="fa fa-envelope" aria-hidden="true"></i>
                 <h3>Email</h3>
                 <p>You are welcome to contact us via email 24/7</p>
@@ -130,7 +130,7 @@
                 <p>Suscribe to our newsletters</p>
 
             </div>
-            <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4 text-center centre-piccc">
+            <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4 text-center">
                 <i class="fa fa-map-marker" aria-hidden="true"></i>
                 <h3>Location</h3>
                 <p>4715, Washington Avenue. Ally Kentucky (603)-555-0123</p>
