--- a/AppLanding/online-shopping-app.html
+++ b/AppLanding/online-shopping-app.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    
+
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Gilroy">
@@ -139,7 +139,7 @@
 
                         </div>
                         <div class="col-md-4 service-item text-center">
-                            <img src="img/track.png" alt="House Delivery" class="service-img img-fluid" />
+                            <img src="img/track.png" alt="House Delivery" class="service-img img-fluid pb-4" />
                             <h4 class="service-header font-weight-bold">Track</h4>
                             <p class="service-desc">
                                 Track the progress of your order </p>
@@ -178,14 +178,16 @@
                     </div>
                     <div class="col-12 d-flex justify-content-center">
 
-                        <video id="my-video" class="video-js" controls preload="auto" width="450" height="260" poster="img/videoplayer.png" data-setup="{}">
-                            <source src="videoplayback.mp4" type="video/mp4" />
-                            <source src="videoplayback.webm" type="video/webm" />
-                            <p class="vjs-no-js">
-                                To view this video please enable JavaScript, and consider upgrading to a web browser that
-                                <a href="https://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>
-                            </p>
+
+
+
+
+                        <video width="1201" height="829" poster="img/videoplayer.png" controls>
+                            <source src="videoplayback.mp4" type="video/mp4">
+                            <source src="videoplayback.mp4" type="video/ogg"> Your browser does not support the video tag.
                         </video>
+
+
                     </div>
 
                 </div>
@@ -341,7 +343,7 @@
 
                             </div>
                             <div class="col-md-6 text-center contained col align-self-end">
-                                <img src="img/iphone-img-5.png" alt="House Delivery" class="service-img img-fluid" />
+                                <img src="img/iphone-img.png" alt="House Delivery" class="service-img img-fluid" />
 
                             </div>
 
@@ -485,8 +487,8 @@
 
 
 
-    <!-- FOOTER START -->
-    <footer class="footer">
+<!-- FOOTER START -->
+<footer class="footer">
         <div class="container">
 
             <div class="d-md-flex justify-content-between text-center pt-5 pb-5 com-soc">
