--- a/AppLanding/online-shopping-app.html
+++ b/AppLanding/online-shopping-app.html
@@ -182,7 +182,7 @@
 
 
 
-                        <video width="1201" height="829" poster="img/videoplayer.png" controls>
+                        <video width="1201" poster="img/videoplayer.png" controls>
                             <source src="videoplayback.mp4" type="video/mp4">
                             <source src="videoplayback.mp4" type="video/ogg"> Your browser does not support the video tag.
                         </video>
