--- a/AppLanding/online-shopping-app.html
+++ b/AppLanding/online-shopping-app.html
@@ -100,7 +100,7 @@
                         </div>
 
 
-                        <p class="center-mobile">You think you can shop online with friends? Sega will make shopping online more fun than you ever
+                        <p class="center-mobile middle-text">You think you can shop online with friends? Sega will make shopping online more fun than you ever
                             imagined
                         </p>
                         <div class="move-down-1 col-sm-12">
@@ -182,7 +182,7 @@
 
 
 
-                        <video width="1201" poster="img/videoplayer.png" controls>
+                        <video width="1129" poster="img/videoplayer.png" controls>
                             <source src="videoplayback.mp4" type="video/mp4">
                             <source src="videoplayback.mp4" type="video/ogg"> Your browser does not support the video tag.
                         </video>
@@ -491,7 +491,7 @@
 <footer class="footer">
         <div class="container">
 
-            <div class="d-md-flex justify-content-between text-center pt-5 pb-5 com-soc">
+            <div class="d-md-flex justify-content-between pt-5 pb-5 com-soc">
                 <ul class="">
                     <li>
                         <a href="">Links</a>
@@ -544,7 +544,7 @@
                     <li class="link-style">cfroshauerc@ucoz.ru</li>
                 </ul>
             </div>
-            <div class="d-md-flex justify-content-between text-center pb-5">
+            <div class="d-md-flex justify-content-between  pb-5">
                 <ul class="">
                     <li>
                         <a href="" class="link-style">cfroshauerc@ucoz.ru</a>
