--- a/dd/MusicArtistePortfolios/music-artiste-portfolio.html
+++ b/dd/MusicArtistePortfolios/music-artiste-portfolio.html
@@ -122,7 +122,7 @@
                                         <img class="img-fluid" src="./assets/images/cta-2.svg" alt="button">
                                     </a>
                                 </div>
-                                <div class= "mobile-chevron">
+                                <div class="mobile-chevron">
                                     <div class="dont-show second_text_wrapper">
                                         <a href="#">
                                             <img class="img-display img-fluid" src="./assets/images/chevrons-down.svg" alt="chevron-down">
@@ -226,6 +226,7 @@
                         <img class="img-fluid" src="./assets/images/deezer.svg" alt="deezer-img">
                     </div>
                 </div>
+
                 <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4  justify-content-center">
                     <img class="img-fluid mx-auto d-block" src="./assets/images/my-music-3.png" alt="music-img">
                     <p class="my-music-text font-weight-bold">Midnight Tapes 2</p>
@@ -235,17 +236,22 @@
                         <img class="img-fluid img-right" src="./assets/images/apple.svg" alt="apple-img">
                         <img class="img-fluid" src="./assets/images/deezer.svg" alt="deezer-img">
                     </div>
+                    <p onclick="myFunction()" class="font-weight-bold dont-show expand-text-button font-weight-bold">
+                        <span onclick="replaceword(this,'Hide','Expand');">Expand</span>
+                        <img src="./assets/images/chevron-down.svg" alt="">
+                    </p>
+                    <!-- <p>Quickly<span onclick="replaceword(this,'Surf','Search');">Search</span>The Web!</p> -->
                 </div>
-
             </div>
 
 
-            <div class="row justify-content-center">
+
+            <div id="myDIV" class="show row justify-content-center">
 
                 <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
                     <img class="img-fluid mx-auto d-block" src="./assets/images/my-music-4.png" alt="music-img">
                     <p class="my-music-text font-weight-bold">MIdnight Tapes</p>
-                    <p class="my-music-text-2">MIdnight Tapes</p>
+                    <p class="my-music-text-2">Midnight Tapes</p>
                     <div class="img-down">
                         <img class="img-fluid img-right" src="./assets/images/spotify.svg" alt="spotify-img">
                         <img class="img-fluid img-right" src="./assets/images/apple.svg" alt="apple-img">
@@ -266,7 +272,7 @@
                     <img class="img-fluid mx-auto d-block" src="./assets/images/my-music-6.png" alt="music-img">
                     <p class="my-music-text font-weight-bold">No face No Case</p>
                     <p class="my-music-text-2">Berlin Kid</p>
-                    <div class="img-down">
+                    <div class="img-down img-down-2">
                         <img class="img-fluid img-right" src="./assets/images/spotify.svg" alt="spotify-img">
                         <img class="img-fluid img-right" src="./assets/images/apple.svg" alt="apple-img">
                         <img class="img-fluid" src="./assets/images/deezer.svg" alt="deezer-img">
@@ -283,14 +289,108 @@
     <!-- My Music Section End -->
 
 
+    <!-- Gallery Section Start -->
+
+    <div class="my-gallery">
+        <div class="container gallery-text-background">
+            <div class="row gallery-text justify-content-end">gallery</div>
+        </div>
+    </div>
+
+
+    <div class="my-gallery">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
+                    <img class="img-fluid" src="./assets/images/gallery-1.png" alt="gallery-1">
+                    <p class="my-gallery-text">Viva la barcelona</p>
+                    <p class="my-gallery-text-2">2019</p>
+                    <hr class="hr-line">
+                    <p onclick="mySecondFunction()" class="font-weight-bold dont-show expand-text-button font-weight-bold">
+                        <span onclick="secondreplaceword(this,'Hide','Expand');">Expand</span>
+                        <img src="./assets/images/chevron-down.svg" alt="">
+                    </p>
+
+                </div>
+
+                <div id="mySECOND-DIV" class=" show col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
+                    <video class="col-12 d-flex justify-content-center" width="586" poster="./assets/images/video-potrait.png" controls>
+                        <source src="./assets/video/videoplayback.mp4" type="video/mp4">
+                        <source src="./assets/video/videoplayback.mp4" type="video/ogg"> Your browser does not support the video tag.
+                    </video>
+                    <p class="my-gallery-text">Manchester fiesta</p>
+                    <p class="my-gallery-text-2">2019</p>
+                    <hr class="hr-line">
+
+
+
+                    <br>
+                    <br>
+                    <img class="img-fluid" src="./assets/images/gallery-2.png" alt="gallery-1">
+                    <p class="my-gallery-text">Lagos, Portugal</p>
+                    <p class="my-gallery-text-2">2020</p>
+                    <hr class="hr-line">
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+
+
+
+    <!-- Gallery Section End -->
+
+
+
+
+    <!-- Expand Section -->
+
+
 
     <!-- Script Start -->
+    <script>
+        function myFunction() {
+            var x = document.getElementById("myDIV");
+            if (x.style.display === "block") {
+                x.style.display = "none";
+            } else {
+                x.style.display = "block";
+            }
+        }
+
+        function mySecondFunction() {
+            var x = document.getElementById("mySECOND-DIV");
+            if (x.style.display === "block") {
+                x.style.display = "none";
+            } else {
+                x.style.display = "block";
+            }
+        }
+
+
+
+        function replaceword(that, word, oword) {
+            that.textContent = that.textContent == oword ? word : oword;
+        }
+
+
+        function secondreplaceword(that, word, oword) {
+            that.textContent = that.textContent == oword ? word : oword;
+        }
+    </script>
+
+
+
+
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
         crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1"
         crossorigin="anonymous"></script>
+
+
     <!-- Script End -->
 </body>
 
