--- a/dd/MusicArtistePortfolios/music-artiste-portfolio.html
+++ b/dd/MusicArtistePortfolios/music-artiste-portfolio.html
@@ -344,9 +344,66 @@
 
 
 
-    <!-- Expand Section -->
+    <!-- Upcoming Shows Start -->
+
+    <div class="my-shows">
+        <div class="container shows-text-background">
+            <div class="row font-reduce shows-text justify-content-end">upcoming shows</div>
+        </div>
+    </div>
 
 
+    <div class="my-shows">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <img class="img-fluid" src="./assets/images/upcoming.jpg" alt="gallery-1">
+                    <p class=" show float-left upcoming-button my-gallery-text">Coachella Paris</p>
+                    <br>
+                    <!-- <p class=" show float-left upcoming-button my-gallery-text-2">December 2020</p> -->
+
+                    <div class=" show row float-right upcoming-button button-down show justify-content-end">
+                        <a href="#">
+                            <img class="img-fluid" src="./assets/images/upcoming-button.svg" alt="button">
+                        </a>
+                    </div>
+                    <div class="dont-show text-center second_text_wrapper mobile-cta-img">
+                        <a href="#">
+                            <img class="img-fluid" src="./assets/images/cta-2.svg" alt="button">
+                        </a>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="clearfix"></div>
+
+
+    <!-- Connect with me -->
+
+    <div class="my-shows">
+        <div class="container shows-text-background">
+            <div class="row font-reduce shows-text justify-content-end">connect with me</div>
+        </div>
+
+
+    </div>
+
+    <div class="my-shows">
+        <div class="container justify-content-center text-center">
+            <div class="row">
+                <div class="col-sm-12">
+                    <div class="img-down img-down-2">
+                        <img class="img-fluid img-right" src="./assets/images/spotify.svg" alt="spotify-img">
+                        <img class="img-fluid img-right" src="./assets/images/apple.svg" alt="apple-img">
+                        <img class="img-fluid" src="./assets/images/deezer.svg" alt="deezer-img">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- Script Start -->
     <script>
